--- a/spotter/Classes/Views/TimeLineTableViewCell.xib
+++ b/spotter/Classes/Views/TimeLineTableViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="146" id="KGk-i7-Jjw" customClass="TimelineTableViewCell" customModule="spotter" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="146" id="KGk-i7-Jjw" customClass="TimelineTableViewCell" customModule="spotter">
             <rect key="frame" x="0.0" y="0.0" width="453" height="146"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -23,7 +23,6 @@
                         <rect key="frame" x="165" y="0.0" width="288" height="146"/>
                         <accessibility key="accessibilityConfiguration" identifier="emoteTextBox"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="288" id="3nT-YY-U74"/>
                             <constraint firstAttribute="height" constant="146" id="jHo-fl-i1e"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
@@ -64,7 +63,7 @@
                 <outlet property="faceImageView" destination="fKs-ic-Fvb" id="7Rm-bw-XBb"/>
                 <outlet property="tweetText" destination="Ug9-Hw-OoP" id="yiQ-lA-nhg"/>
             </connections>
-            <point key="canvasLocation" x="15" y="-264"/>
+            <point key="canvasLocation" x="-175" y="-224"/>
         </tableViewCell>
     </objects>
 </document>
